<resources>
    <string name="app_name">Hope Notifications</string>
    <string name="welcome">Selamat Datang !</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don`t have an account ?</string>
    <string name="register">Sign Up</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account ?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="date">Date</string>
    <string name="login_as">Login as</string>
    <string name="berita_terbaru">Berita terbaru</string>
    <string name="lihat_lainnya">Lihat lainnya</string>
    <string name="obrolan">Obrolan</string>
    <string name="artikel">Artikel</string>
    <string name="panduan">Panduan</string>
    <string name="notifikasi_darurat">Notifikasi Darurat</string>
    <string name="laporan">Laporan</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="text_btn_panic">Tekan tombol Panic Button selama 10 detik maka secara otomatis akan mengirimkan sinyal SOS ke posko terdekat untuk selanjutnya mendapatkan bantuan</string>
    <string name="panic_button">Panic Button</string>
</resources>