<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_dashboard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/menu_welcome"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_icon_dashboard"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/obrolan"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_chat" />

        <TextView
            android:id="@+id/tv_artikel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_icon_dashboard"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/artikel"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_artikel" />

        <TextView
            android:id="@+id/tv_panduan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_icon_dashboard"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/panduan"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_panduan" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/notifikasi_darurat"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_value_notif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_horizontal"
                    android:text="2 Laporan"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:background="@color/gray_dark" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/laporan"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_value_laporan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_horizontal"
                    android:text="5 Pesan"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>